--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,8 @@
     width: 100%;
     padding: 5rem;
     text-align: center;
-    background-color: rgb(209, 206, 206);
+    background-color: rgb(30, 30, 36);
+    color:#fafafa;
     font-size: 1.5rem;
     font-weight: 500;
 }
