--- a/src/components/StakeHistory/StakeHistory.module.css
+++ b/src/components/StakeHistory/StakeHistory.module.css
@@ -5,6 +5,11 @@
     border-radius: 1rem;
 }
 
+.scroll {
+    height: 500px;
+    overflow-y: scroll;
+}
+
 .table {
     width: 100%;
 }
@@ -17,10 +22,8 @@
 }
 
 .table__head_row {
-    
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
-    
 }
 
 .table_head_data {
@@ -35,8 +38,6 @@
     background-color: rgb(209, 206, 206);
 }
 
-
 .unstake_style {
     background-color: rgb(240, 239, 239);
 }
-
